tests/examples/good/good005.jl

int main()
{
   int a[13];
   return a[14] + a[-1];
}
