tests/examples/bad/bad104.jl

int main()
{
   int x = 15;
   int b[x];
   double c[-1];
   return b[16];
}
